@@ -1,3 +1,12 @@
+2004-12-14  Alexander Neundorf <neundorf@kde.org>
+	    Andrew Lunn        <andrew.lunn@ascom.ch>
+
+	* include/hal_io.h: Add cyg_hal_sys_shmget(), cyg_hal_sys_shmat()
+	and cyg_hal_sys_shmdt() system calls
+	* src/synth_syscalls.c: Implementations of cyg_hal_sys_shmget(), 
+	cyg_hal_sys_shmat() and cyg_hal_sys_shmdt(). Moved 
+	cyg_hal_sys_mmap() from the flash driver to here.
+
 2004-08-09  Andrew Lunn  <andrew.lunn@ascom.ch>
 
 	* include/hal_intr.h (HAL_PLATFORM_RESET): Added missing ;
